--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
     "express": "^4.18.2",
     "public-ip": "^6.0.1",
     "sqlite3": "^5.1.4"
