--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "iot"
@@ -16,6 +16,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "public-ip": "^6.0.1",
     "sqlite3": "^5.1.4"
   }
