--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+    "buildCommand": "npm run",
     "version": 2,
     "builds": [
       {
         "src": "index.js",
-        "use": "@now/node"
+        "use": "@vercel/node"
       }
     ],
     "routes": [
